bad/var_decl_init_invalid_conversion_bool_string.example_compiler_output
ERROR
[1mbad/var_decl_init_invalid_conversion_bool_string.lat:3:12: [1;31merror: [0;1mincompatible types: cannot assign variable of type `boolean` with an expression of type `string`[m
	boolean x = "";
	          [1;32m^[m
